labs/break-it/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: labs
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
